add js to select pizza size and output base price

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
       <form class="pizza">
         <div class="form-group">
-          <label for="pizzaSize">Choose a pizza size:</label>
-          <select class="form-control" id="pizzaSize" placeholder="Pizza">
-            <option value="" selected disabled>Please select a size</option>
-            <option>Small</option>
-            <option>Medium</option>
+          <label for="sizeSelect">Choose a pizza size:</label>
+          <select class="form-control" id="sizeSelect" placeholder="Pizza">
+            <!-- <option value=""</option> -->
             <option>Large</option>
+            <option>Medium</option>
+            <option>Small</option>
           </select>
         </div>
 
@@ -33,7 +33,7 @@
         <button type="submit" class="btn btn-info">Submit order</button>
       </form>
 
-      <h2>Here's your pizza price: <span id="total-price"></span></h2>
+      <h3>Here's your pizza price: <span id="total-price"></span></h3>
     </div>
   </body>
 </html>
