trying to change price for different pizza sizes

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
       <h1>Pizza Shop Order Form</h1>
 
       <form class="pizza">
-        <div class="form-group">
+        <div class="form-group" id="size">
           <label for="sizeSelect">Choose a pizza size:</label>
-          <select class="form-control" id="sizeSelect" placeholder="Pizza">
-            <!-- <option value=""</option> -->
+          <select class="form-control" id="sizeSelect">
             <option>Large</option>
             <option>Medium</option>
             <option>Small</option>
