--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <h1>Pizza Shop Order Form</h1>
 
       <form class="pizza">
-        <div class="form-group" id="size">
+        <div class="form-group">
           <label for="sizeSelect">Choose a pizza size:</label>
           <select class="form-control" id="sizeSelect">
-            <option>Large</option>
-            <option>Medium</option>
-            <option>Small</option>
+            <option value="large">Large</option>
+            <option value="medium">Medium</option>
+            <option value="small">Small</option>
           </select>
         </div>
 
