add toppings with extra prices

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="form-group">
           <label for="sizeSelect">Choose a pizza size:</label>
           <select class="form-control" id="sizeSelect">
-            <option value="large">Large</option>
-            <option value="medium">Medium</option>
-            <option value="small">Small</option>
+            <option value="large">Large = $20</option>
+            <option value="medium">Medium = $17</option>
+            <option value="small">Small = $13</option>
           </select>
         </div>
 
@@ -32,7 +32,7 @@
         <button type="submit" class="btn btn-info">Submit order</button>
       </form>
 
-      <h3>Here's your pizza price: <span id="total-price"></span></h3>
+      <h3>Your pizza will cost: $<span id="total-price"></span></h3>
     </div>
   </body>
 </html>
