--- a/index.html
+++ b/index.html
@@ -9,30 +9,37 @@
   </head>
   <body>
     <div class="container">
-      <h1>Pizza Shop Order Form</h1>
-
-      <form class="pizza">
-        <div class="form-group">
-          <label for="sizeSelect">Choose a pizza size:</label>
-          <select class="form-control" id="sizeSelect">
-            <option value="large">Large = $20</option>
-            <option value="medium">Medium = $17</option>
-            <option value="small">Small = $13</option>
-          </select>
+      <div id="bgcolor">
+        <div id="header">
+          <h1>Pizza Shop<br>Order Form</h1>
         </div>
 
-        <div class="form-group">
-          <p id="toppings">Choose the toppings you'd like to add:</p>
-          <input type="checkbox" name="topping-type" value="cheese"> Extra cheese.<br>
-          <input type="checkbox" name="topping-type" value="tomato"> Fresh tomatoes.<br>
-          <input type="checkbox" name="topping-type" value="onion"> Onions.<br>
-          <input type="checkbox" name="topping-type" value="pepper"> Red peppers.<br>
-        </div>
+        <form class="pizza">
+          <div class="form-group" id="dropMenu">
+            <label for="sizeSelect">Choose a pizza size:</label>
+            <select class="form-control" id="sizeSelect">
+              <option value="large">Large = $20</option>
+              <option value="medium">Medium = $17</option>
+              <option value="small">Small = $13</option>
+            </select>
+          </div>
 
-        <button type="submit" class="btn btn-info">Submit order</button>
-      </form>
+          <div class="form-group" id="checkboxes">
+            <p id="toppings">Extra toppings are $1 each. Choose the toppings you'd like to add:</p>
+            <input type="checkbox" name="topping-type" value="cheese"> Extra cheese<br>
+            <input type="checkbox" name="topping-type" value="pepper"> Ricotta cheese<br>
+            <input type="checkbox" name="topping-type" value="tomato"> Fresh tomatoes<br>
+            <input type="checkbox" name="topping-type" value="onion"> Onions<br>
+            <input type="checkbox" name="topping-type" value="pepper"> Red peppers<br>
+            <input type="checkbox" name="topping-type" value="pepper"> Black olives<br>
+            <input type="checkbox" name="topping-type" value="pepper"> Artichoke<br>
+          </div>
 
-      <h3>Your pizza will cost: $<span id="total-price"></span></h3>
+          <button type="submit" class="btn btn-info">Submit order</button>
+        </form>
+
+        <h3>Your pizza will cost: $<span id="total-price"></span></h3>
+      </div>
     </div>
   </body>
 </html>
