add hide/show for final pizza cost

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input type="checkbox" name="topping-type" value="pepper"> Artichoke<br>
           </div>
 
-          <button type="submit" class="btn btn-info">Submit order</button>
+          <button type="submit" class="btn">Submit order</button>
         </form>
 
         <h3>Your pizza will cost: $<span id="total-price"></span></h3>
